import "EventId.proto";

option java_outer_classname="CacheStoppedEventResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message CacheStoppedEventResponse 
{
	optional string cacheId = 1;
	optional EventId eventId = 2;

}