import "KeyValue.proto";
option java_outer_classname="ExecuteReaderCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message ExecuteReaderCommand {
    optional string query = 1;
    repeated KeyValue values = 2;
    optional bool getData = 3;
	optional int32 chunkSize = 4;
	optional int64 requestId = 5;
}
